--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -5,6 +5,14 @@ spring:
   cloud:
     gateway:
       routes:
+        # Route for /api/auth/** to auth-service
+        - id: auth-service-route
+          uri: http://auth-service:4005
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
+
         # Route for /api/patients/** to patient-service
         - id: patient-service-route
           uri: http://patient-service:4000
